Fix crash when the immesriv mode is enabled during initialization

This is a temp fix. It looks like it's trying to reveal first when
created, but it doesn't work that way. This could be either regression,
or wrong, and I'll look into separately.

BUG=825260

Change-Id: Idc605ef9f42b48b847c3bc562ebd1d9a3a0c33c6
Reviewed-on: https://chromium-review.googlesource.com/978891
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545657}
Former-commit-id: 439fd0c576787f0f0e8cf4546a2c6fca05f9e592